--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
     <title>Wellbriety</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav id="navbar2" class="navbar navbar-expand-lg navbar-light" style="background-color: #FFC52D;">
+      <a class="navbar-brand" href="/">
+        <div>
+          <img src="images/logo.png" class="logo-image">
+        </div>
+      </a>
+
+      
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Wellbriety</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #660000;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Wellbriety</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,10 +60,6 @@
               <a class="nav-link disabled">Disabled</a>
             </li>
           </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
@@ -56,7 +71,7 @@
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3 herotext">Get the help you deserve now <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-            <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_nzGclg.json"  background="transparent"  speed="1"  style="width: 150px; height: 150px; position: absolute; top: 180px; right: 700px;"  loop autoplay></lottie-player></h1>
+            <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_nzGclg.json"  background="transparent"  speed="1"  style="width: 150px; height: 150px; position: absolute; top: 174px; right: 620px;"  loop autoplay></lottie-player></h1>
           
           <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
@@ -69,7 +84,6 @@
     </div>
     <div class="container-fluid">
       <div class="row" style="pad: 20px;">
-
         <div class="col">
           <div class="card" style="width: 30rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
             <img  style="border-radius: 10em; padding: 20px; height: 200px; width: 200px; margin: auto;"src="https://via.placeholder.com/150" class="card-img-top" alt="...">
