--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     </div>
     </div>
     <div class="container-fluid">
-      <div class="row" style="pad: 20px;">
+      <div class="cardrow" style="pad: 20px;">
         <div class="col">
-          <div class="card" style="width: 30rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
+          <div class="card" style="width: 25rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
             <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="https://via.placeholder.com/150" class="card-img-top" alt="...">
             <div class="card-body">
               <h4 class="card-text card-custom-title"> Robert, 23</h4>
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="width: 30rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
+          <div class="card" style="width: 25rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
             <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="https://via.placeholder.com/150" class="card-img-top" alt="...">
             <div class="card-body">
               <h4 class="card-text card-custom-title"> Robert, 23</h4>
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card" style="width: 30rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
+          <div class="card" style="width: 25rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
             <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="https://via.placeholder.com/150" class="card-img-top" alt="...">
             <div class="card-body">
               <h4 class="card-text card-custom-title"> Robert, 23</h4>
