--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
@@ -80,28 +80,28 @@
       <div class="cardrow" style="pad: 20px;">
         <div class="col">
           <div class="card" style="width: 25rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
-            <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+            <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="images/john.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h4 class="card-text card-custom-title"> Robert, 23</h4>
-              <p class="card-text card-custom-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h4 class="card-text card-custom-title"> John, 48</h4>
+              <p class="card-text card-custom-text">“At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet."</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 25rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
-            <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+            <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="images/Robert.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h4 class="card-text card-custom-title"> Robert, 23</h4>
-              <p class="card-text card-custom-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text card-custom-text">“At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet."</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card" style="width: 25rem; z-index: 3; ; box-shadow: 0px 3px 10px #00000029; bottom: 60px; border-radius: 9px;">
-            <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+            <img  style="border-radius: 10em; padding: 20px; height: 150px; width: 150px; margin: auto;"src="images/jessie.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h4 class="card-text card-custom-title"> Robert, 23</h4>
-              <p class="card-text card-custom-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h4 class="card-text card-custom-title"> Jessie, 35</h4>
+              <p class="card-text card-custom-text">“At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.”</p>
             </div>
           </div>
         </div>
